# the-awesome-project

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: build_install.yaml  publish_mkdocs.yml  test.yaml
docs/: get_started.md  index.md  installation.md
get_started/: index.html
installation/: index.html
search/: search_index.json
tests/: test_main.py
