[tool.poetry]
name = "the_awesome_project"
version = "0.1.0"
authors = ["FirstName Name <me@email.com>"]
description = ""
readme = "README.md"
packages = [{include = "the_awesome_project"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
numpy = "^1.26.4"
pydantic = "^2.6.3"
typer = "^0.9.0"
mlflow = "^2.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.2.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"
pytest-cov = "^4.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"